# Computacion-Grafica

./: .gitignore  CMakeLists.txt
src/: array.h  display.c  display.h  lighting.c  lighting.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  stb_ds.h  triangle.c  triangle.h  vector.h
